--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "format": "prettier --write .",
     "lint": "prettier --check . && eslint .",
     "test:e2e": "playwright test",
-    "test": "npm run test:e2e"
+    "test": "npm run test:e2e",
+    "test:show-report": "npx monocart show-report ./coverage/e2e/monocart-report.html",
+    "coverage:show-report": "npx monocart show-report ./coverage/e2e/v8/index.html"
   },
   "devDependencies": {
     "@eslint/compat": "^1.2.5",
@@ -29,6 +31,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/node": "^25.0.6",
     "bits-ui": "^2.15.4",
     "clsx": "^2.1.1",
     "eslint": "^9.18.0",
@@ -37,6 +40,7 @@
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
+    "monocart-reporter": "^2.9.23",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
